--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "d": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1", 
     "@apollo/client": "^3.3.7",
     "@types/node-fetch": "^2.5.8",
     "fetch": "^1.1.0",
+    "gatsby": "^2.26.1",
     "gatsby-plugin-typescript": "^2.11.0",
-    "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-graphql": "^2.13.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "node-sass": "^5.0.0",
+    "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-base-table": "^1.12.0",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "source-map-support": "^0.5.19",
@@ -36,5 +36,8 @@
     "typescript": "^4.1.3",
     "victory": "^35.4.7",
     "zlib": "^1.0.5"
+  },
+  "devDependencies": {
+    "gatsby-plugin-ts-config": "^1.1.5"
   }
 }
